// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional() should fail 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should equal to undefined",
      "path": Array [],
      "value": 1,
    },
    Object {
      "errors": Array [],
      "message": "Value should be a string",
      "path": Array [],
      "value": 1,
    },
  ],
  "message": "At least one validator should succeed: [Value should equal to undefined OR Value should be a string]",
  "path": Array [],
  "value": 1,
}
`;

exports[`optional() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "errors": Array [],
      "message": "Value should equal to undefined",
      "path": Array [],
      "value": null,
    },
    Object {
      "errors": Array [],
      "message": "Value should be a string",
      "path": Array [],
      "value": null,
    },
  ],
  "message": "Custom message",
  "path": Array [],
  "value": null,
}
`;
